<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:layout_gravity="center_horizontal"    android:foregroundGravity="center_horizontal">    <TextView        android:id="@+id/textView15"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginTop="32dp"        android:text="if you couldn't find your account or having problem with your email or number, you can apply to recover your account"        android:textAlignment="viewStart"        android:textColor="?android:textColorPrimary"        android:textIsSelectable="true"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="@+id/jkjkvx"        app:layout_constraintStart_toStartOf="@+id/jkjkvx"        app:layout_constraintTop_toBottomOf="@+id/button" />    <androidx.appcompat.widget.Toolbar        android:id="@+id/toolbar"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:background="?colorPrimary"        android:minHeight="?attr/actionBarSize"        android:theme="?attr/actionBarTheme"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/log_in"            android:textColor="@color/textColorPrimary"            android:textSize="24sp"            android:textStyle="bold"            tools:ignore="RtlHardcoded"            tools:layout_editor_absoluteX="16dp"            tools:layout_editor_absoluteY="12dp" />    </androidx.appcompat.widget.Toolbar>    <Button        android:id="@+id/button"        android:layout_width="0dp"        android:layout_height="52dp"        android:layout_gravity="center_horizontal"        android:layout_marginTop="16dp"        android:text="@string/verify"        android:textColor="@color/white"        android:textSize="20sp"        app:cornerRadius="25dp"        app:layout_constraintEnd_toEndOf="@+id/jhvjkjkvx"        app:layout_constraintStart_toStartOf="@+id/jhvjkjkvx"        app:layout_constraintTop_toBottomOf="@+id/jhvjkjkvx" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/jkjkvx"        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="16dp"        android:layout_marginTop="16dp"        android:layout_marginEnd="16dp"        android:hint="@string/email"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textView4">        <EditText            android:id="@+id/email"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:inputType="textWebEmailAddress"            android:importantForAutofill="no"            android:maxLength="50"            tools:ignore="LabelFor" />    </com.google.android.material.textfield.TextInputLayout>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/jhvjkjkvx"        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="16dp"        android:layout_marginTop="8dp"        android:layout_marginEnd="16dp"        android:hint="@string/mobile_number"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/jkjkvx">        <EditText            android:id="@+id/number"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:importantForAutofill="no"            android:inputType="number"            android:maxLength="25"            tools:ignore="LabelFor" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/textView4"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:text="@string/ail_com"        android:textAlignment="viewStart"        android:textColor="?android:textColorPrimary"        android:textIsSelectable="true"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="@+id/jkjkvx"        app:layout_constraintStart_toStartOf="@+id/jkjkvx"        app:layout_constraintTop_toBottomOf="@+id/imageView16" />    <ImageView        android:id="@+id/imageView16"        android:layout_width="wrap_content"        android:layout_height="180dp"        android:layout_marginTop="8dp"        android:visibility="visible"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/toolbar"        app:srcCompat="@drawable/ic_judge" />    <ImageView        android:id="@+id/imageView13"        android:layout_width="80dp"        android:layout_height="80dp"        android:layout_marginEnd="8dp"        android:src="@drawable/ic_gpp_maybe_24px__1_"        app:layout_constraintBottom_toTopOf="@+id/textView4"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.572"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="@+id/imageView16"        app:layout_constraintVertical_bias="0.0"        app:tint="?colorPrimaryDark"        tools:ignore="ContentDescription" />    <TextView        android:id="@+id/textView16"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:clickable="true"        android:focusable="auto"        android:linksClickable="true"        android:text="Apply for recovery"        android:textColor="#2A4C81"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="@+id/textView15"        app:layout_constraintStart_toStartOf="@+id/textView15"        app:layout_constraintTop_toBottomOf="@+id/textView15" /></androidx.constraintlayout.widget.ConstraintLayout>